Amended data subfolder path